--- a/index.html
+++ b/index.html
@@ -62,10 +62,16 @@
                         <h2 class="works__heading">How it works</h2>
                         <p class="works__desc">Spice up your space even simpler than you think</p>
                     </div>
+                    <div class="works__center">
+                        <img class="works__img" src="./img/beautiful.png" alt="beautiful" width="1063" height="350">
+                        <img class="works__ovel" src="./img/ovel.svg" alt="ovel-logo" width="128" height="128">
+                    </div>
                 </div>
             </section>
         </main>
         <!--FOOTER-->
         <footer></footer>
+
+        <script src="./js/script.js"></script>
     </body>
     </html>
