--- a/index.html
+++ b/index.html
@@ -65,13 +65,22 @@
                     <div class="works__center">
                         <img class="works__img" src="./img/beautiful.png" alt="beautiful" width="1063" height="350">
                         <img class="works__ovel" src="./img/ovel.svg" alt="ovel-logo" width="128" height="128">
+                        <div class="works__center-left">
+                            <h2 class="works__center-left-heading">We provide design and build 
+                                for commercial building, 
+                                interior and furniture to improve 
+                                the better life.
+                            </h2>
+                            
+                            <span class="works__span">S E E  V I D E O</span>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </section>
-        </main>
-        <!--FOOTER-->
-        <footer></footer>
-
-        <script src="./js/script.js"></script>
-    </body>
-    </html>
+                </section>
+            </main>
+            <!--FOOTER-->
+            <footer></footer>
+            
+            <script src="./js/script.js"></script>
+        </body>
+        </html>
